fix: the _typos.toml 2

--- a/_typos.toml
+++ b/_typos.toml
@@ -1,8 +1,9 @@
-# .typos.toml
+# Typo check: https://github.com/crate-ci/typos
 
 [files]
-extend-exclude = ["go.sum", "check_branch_name.sh", "go.mod"]
+extend-exclude = ["go.sum", "check_branch_name.sh","go.mod"]
 
 [default.extend-identifiers]
+# *sigh* this just isn't worth the cost of fixing
 O_WRONLY = "O_WRONLY"
 WRONLY = "WRONLY"
