--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -12,14 +12,14 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Check Source Branch
-        run: python3 -c "import sys; sys.exit(0 if '${{ github.head_ref }}'.startswith(('release', 'hotfix')) else 1)"
+        run: python2 -c "exit(0 if '${{ github.head_ref }}'.startswith('release') or '${{ github.head_ref }}'.startswith('hotfix') else 1)"
 
       - name: Check Version
         run: |
-          # 使用Python 3的语法更新
-          SOURCE_VERSION=$(grep 'Version\s*=\s*\"v[0-9]+\.[0-9]+\.[0-9]+\"' *.go | awk -F '\"' '{print $(NF-1)}')
+          # get version code, runner not support grep -E here
+          SOURCE_VERSION=`grep 'Version\s*=\s*\"v[0-9]\{1,\}\.[0-9]\{1,\}\.[0-9]\{1,\}\"' *.go | awk -F '\"' '{print $(NF-1)}'`
           git checkout main
-          MASTER_VERSION=$(grep 'Version\s*=\s*\"v[0-9]+\.[0-9]+\.[0-9]+\"' *.go | awk -F '\"' '{print $(NF-1)}')
+          MASTER_VERSION=`grep 'Version\s*=\s*\"v[0-9]\{1,\}\.[0-9]\{1,\}\.[0-9]\{1,\}\"' *.go | awk -F '\"' '{print $(NF-1)}'`
           git checkout ${{Head.SHA}}
-          # 使用Python 3来比较版本
-          python3 -c "import sys; sys.exit(0 if list(map(int, '${SOURCE_VERSION#v}'.split('.')[:3])) > list(map(int, '${MASTER_VERSION#v}'.split('.')[:3])) else 1)"
+          # check version update
+          python2 -c "exit(0 if list(map(int,'${SOURCE_VERSION#v}'.split('.')[:3])) > list(map(int,'${MASTER_VERSION#v}'.split('.')[:3])) else 1)"
