feat: add sql_dir parameter to DB configuration (#181)
* feat: Add sql_dir parameter

* fix: fix sql_dir parameter

* fix: the conflict between dsn and sql_dir

* fix: the conflict between dsn and sql_dir

* fix: the go.mod

* fix: the _typos.toml

* fix: the _typos.toml 2

* fix: the model.go and release-check.yml

* fix: the release-check.yml

* update: release-check.yml to python3

* fix: the release-check.yml

* fix: restore the release-check.yml

--- a/_typos.toml
+++ b/_typos.toml
@@ -1,7 +1,7 @@
 # Typo check: https://github.com/crate-ci/typos
 
 [files]
-extend-exclude = ["go.sum", "check_branch_name.sh"]
+extend-exclude = ["go.sum", "check_branch_name.sh","go.mod"]
 
 [default.extend-identifiers]
 # *sigh* this just isn't worth the cost of fixing
