--- a/tpl/hertz/server/standard/layout.yaml
+++ b/tpl/hertz/server/standard/layout.yaml
@@ -70,7 +70,7 @@ layouts:
       	if conf.GetConf().Hertz.EnablePprof {
       		pprof.Register(h)
       	}
-      
+
       	// gzip
       	if conf.GetConf().Hertz.EnableGzip {
       		h.Use(gzip.Gzip(gzip.DefaultCompression))
@@ -90,8 +90,8 @@ layouts:
 
   - path: go.mod
     delims:
-      - '{{'
-      - '}}'
+      - "{{"
+      - "}}"
     body: |-
       module {{.GoModule}}
       {{- if .UseApacheThrift}}
@@ -161,15 +161,16 @@ layouts:
       }
 
       type Hertz struct {
-      	Address       string `yaml:"address"`
-      	EnablePprof   bool   `yaml:"enable_pprof"`
-      	EnableGzip    bool   `yaml:"enable_gzip"`
+        Service         string `yaml:"service"`
+        Address         string `yaml:"address"`
+        EnablePprof     bool   `yaml:"enable_pprof"`
+        EnableGzip      bool   `yaml:"enable_gzip"`
         EnableAccessLog bool   `yaml:"enable_access_log"`
-      	LogLevel      string `yaml:"log_level"`
-      	LogFileName   string `yaml:"log_file_name"`
-      	LogMaxSize    int    `yaml:"log_max_size"`
-      	LogMaxBackups int    `yaml:"log_max_backups"`
-      	LogMaxAge     int    `yaml:"log_max_age"`
+        LogLevel        string `yaml:"log_level"`
+        LogFileName     string `yaml:"log_file_name"`
+        LogMaxSize      int    `yaml:"log_max_size"`
+        LogMaxBackups   int    `yaml:"log_max_backups"`
+        LogMaxAge       int    `yaml:"log_max_age"`
       }
 
       // GetConf gets configuration instance
@@ -232,13 +233,13 @@ layouts:
       	}
       }
 
-
   - path: conf/dev/conf.yaml
     delims:
       - ""
       - ""
     body: |-
       hertz:
+        service: "{{.ServiceName}}"
         address: ":8080"
         enable_pprof: true
         enable_gzip: true
@@ -264,6 +265,7 @@ layouts:
       - ""
     body: |-
       hertz:
+        service: "{{.ServiceName}}"
         address: ":8080"
         enable_pprof: false
         enable_gzip: true
@@ -289,6 +291,7 @@ layouts:
       - ""
     body: |-
       hertz:
+        service: "{{.ServiceName}}"
         address: ":8080"
         enable_pprof: true
         enable_gzip: true
@@ -307,7 +310,6 @@ layouts:
         username: ""
         password: ""
         db: 0
-
 
   - path: biz/dal/init.go
     delims:
