--- a/tpl/hertz/server/standard_v2/package.yaml
+++ b/tpl/hertz/server/standard_v2/package.yaml
@@ -34,13 +34,15 @@ layouts:
        }
        {{end}}
         {{if eq $MethodInfo.OutputDir "" -}}
-          resp,err := service.New{{$MethodInfo.Name}}Service(ctx, c).Run(&req)
+          resp := &{{$MethodInfo.ReturnTypeName}}{}
+          resp,err = service.New{{$MethodInfo.Name}}Service(ctx, c).Run(&req)
           if err != nil {
                utils.SendErrResponse(ctx, c, consts.StatusInternalServerError, err)
                return
           }
         {{else}}
-          resp,err := {{$MethodInfo.OutputDir}}.New{{$MethodInfo.Name}}Service(ctx, c).Run(&req)
+          resp := &{{$MethodInfo.ReturnTypeName}}{}
+          resp,err = {{$MethodInfo.OutputDir}}.New{{$MethodInfo.Name}}Service(ctx, c).Run(&req)
           if err != nil {
                   utils.SendErrResponse(ctx, c, consts.StatusInternalServerError, err)
                   return
@@ -134,7 +136,7 @@ layouts:
         w := ut.PerformRequest(h.Engine, "{{.HTTPMethod}}", path, body,header)
         resp := w.Result()
         t.Log(string(resp.Body()))
-        
+
         // todo edit your unit test.
         // assert.DeepEqual(t, 200, resp.StatusCode())
         // assert.DeepEqual(t, "null", string(resp.Body()))
@@ -159,7 +161,7 @@ layouts:
         w := ut.PerformRequest(h.Engine, "{{$MethodInfo.HTTPMethod}}", path, body,header)
         resp := w.Result()
         t.Log(string(resp.Body()))
-      
+
         // todo edit your unit test.
         // assert.DeepEqual(t, 200, resp.StatusCode())
         // assert.DeepEqual(t, "null", string(resp.Body()))
