--- a/tpl/kitex/server/standard/service.yaml
+++ b/tpl/kitex/server/standard/service.yaml
@@ -52,7 +52,7 @@ body: |-
 
     return nil
   }
-  {{else -}}
+  {{else}}
   
   // New{{.Name}}Service new {{.Name}}Service
   func New{{.Name}}Service(ctx context.Context) *{{.Name}}Service {
