[feat]gen docker file function succeed

--- a/tpl/docker/standard/dockerfile_tpl.yaml
+++ b/tpl/docker/standard/dockerfile_tpl.yaml
@@ -4,10 +4,11 @@ body: |-
       
       LABEL stage=gobuilder
       
-      ENV CGO_ENABLED 0
-      {{if .HasMirror}}ENV GOPROXY https://goproxy.cn,direct
+      ENV CGO_ENABLED=0
+
+      {{if .Mirrors}}ENV GOPROXY=https://goproxy.cn,direct
       RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
-      {{end}}{{if .HasTimezone}}
+      {{end}}{{if .Timezone}}
       RUN apk update --no-cache && apk add --no-cache tzdata
       {{end}}
       WORKDIR /build
@@ -15,30 +16,27 @@ body: |-
       ADD go.mod .
       ADD go.sum .
       RUN go mod download
-      COPY . .
-      {{if .HasEtcFile}}
-      {{range .EtcDirs}}
-      COPY {{.}} /app/etc
-      {{end}}
-      {{end}}
 
+      COPY . .
+      {{if .EtcDirs}}{{range .EtcDirs}}COPY {{.}} /app/{{.}}
+      {{end}}{{end}}
+      
       RUN go build -ldflags="-s -w" -o /app/{{.ExeFile}} {{.GoMainFrom}}
       
       
       FROM {{.BaseImage}}
       
       COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
-      {{if .HasTimezone}}COPY --from=builder /usr/share/zoneinfo/{{.Timezone}} /usr/share/zoneinfo/{{.Timezone}}
-      ENV TZ {{.Timezone}}
+      {{if .Timezone}}COPY --from=builder /usr/share/zoneinfo/{{.Timezone}} /usr/share/zoneinfo/{{.Timezone}}
+      ENV TZ={{.Timezone}}
       {{end}}
+
       WORKDIR /app
       COPY --from=builder /app/{{.ExeFile}} /app/{{.ExeFile}}
-      {{if .HasEtcFile}}
-            {{range .EtcDirs}}
-      COPY  --from=builder {{.}} /app/etc
-            {{end}}
+      {{if .EtcDirs}}{{range .EtcDirs}}COPY  --from=builder /app/{{.}} /app/{{.}}
+      {{end}}{{end}}
+      
+      {{if .Port}}EXPOSE {{.Port}}
       {{end}}
-      {{if .HasPort}}
-      EXPOSE {{.Port}}
-      {{end}}
+      
       CMD ["./{{.ExeFile}}"{{.Argument}}]
